--- a/streetpassble/src/main/AndroidManifest.xml
+++ b/streetpassble/src/main/AndroidManifest.xml
@@ -1,24 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="gupuru.streetpassble">
-
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <uses-feature
-        android:name="android.hardware.bluetooth_le"
-        android:required="true" />
-
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
-
-        <service
-            android:name=".service.StreetPassService"
-            android:enabled="true"
-            android:exported="true"/>
-
-    </application>
-
+<manifest package="gupuru.streetpassble">
+    <application/>
 </manifest>
