--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     releaseCompile project(path: ':streetpassble', configuration: 'release')
     debugCompile project(path: ':streetpassble', configuration: 'debug')
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:design:23.1.1'
 }
