--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         <service
             android:name="gupuru.streetpassble.service.StreetPassService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
+        <activity android:name=".activity.ChatActivity"></activity>
     </application>
 
 </manifest>
