--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,8 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    releaseCompile project(path: ':streetpassble', configuration: 'release')
-    debugCompile project(path: ':streetpassble', configuration: 'debug')
+    compile project(path: ':streetpassble')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
