--- a/streetpassble/build.gradle
+++ b/streetpassble/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
-    publishNonDefault true
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
-        versionName "0.0.15"
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -17,6 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+publish {
+    userOrg = 'gupuru'
+    groupId = 'com.gupuru.streetpass'
+    artifactId = 'streetpass'
+    publishVersion = '0.1.0'
+    desc = 'street pass communication'
+    website = 'https://github.com/gupuru/StreetPassBLE'
 }
 
 dependencies {
