--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://raw.github.com/gupuru/StreetPassBLE/master/repository' }
+    }
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
     }
 }
 
