--- a/streetpassble/build.gradle
+++ b/streetpassble/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.1.1"
     }
     buildTypes {
         release {
@@ -17,17 +17,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 publish {
     userOrg = 'gupuru'
     groupId = 'com.gupuru.streetpass'
     artifactId = 'streetpass'
-    publishVersion = '0.1.0'
+    publishVersion = '0.1.1'
     desc = 'street pass communication for android'
     website = 'https://github.com/gupuru/StreetPassBLE'
+    licences = ['MIT']
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
 }
